# flamboyance

./: .coverage  .gitignore  README.md  TESTING_GROUND.md  coverage.xml  mcp_config.json  orchestrator_spec.md  phase 1 results.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml
.windsurf/: mcp_config.json
agents/: __init__.py  __main__.py  agent.py  config.py  events.py  llm_driver.py  mutations.py  persona.py  persona_loader.py  rate_limiter.py  report.py  runner_local.py  runner_mutation.py  screenshot_annotator.py  validation.py
benchmark/: README.md  RESULTS.md  __init__.py  __main__.py  analyze.py  matcher.py  run_benchmark.py  schema.py
benchmark/devin_outputs/: .gitkeep
benchmark/ground_truth/: __init__.py  buggy-checkout.json  confusing-signup.json
benchmark/results/: .gitkeep  benchmark-1777173910.json  benchmark-1777174010.json  benchmark-1777174047.json  benchmark-1777174646.json  benchmark-1777174881.json  benchmark-1777175100.json  benchmark-1777175551.json
docker/: Dockerfile.agent  docker-compose.yml
examples/: smoke_test.sh
examples/sample_project/: app.py
extension/: package-lock.json  package.json
extension/src/: extension.ts  mcpClient.ts  sidebar.ts
flamboyance_mcp/: __init__.py  __main__.py  server.py
llm/: __init__.py  groq.py  logging.py  ollama.py  router.py
mcp/: __main__.py  server.py
orchestrator/: __init__.py  cli.py  context_mapper.py  groq_llm.py  master.py  models.py  reducer.py  worker.py  worktree.py
results/: full-heuristics-run.md  report-001e5a27-e7c5-4c31-b6b0-0c78ea2b7ee3.md  report-04899ec9-f6ae-4b29-9159-24b403352f5e.md  report-09c22b90-9a81-4a27-9be0-f58a42cea925.md  report-09c9960d-ab7a-4968-be51-4345cde6576a.md  report-0b4e47d5-1d06-4037-87ee-e527825d81e1.md  report-0e53fe4b.md  report-0fcfc897-9ef9-4acd-ade3-7e914d992c87.md  report-15776b16.md  report-1cac9cc2.md  report-22a421af-7904-4423-b7a1-4c4d1f3bc7b6.md  report-2e538a59-8ec3-49fe-b7d7-3c6c7231f938.md  report-313f56ac-47fb-4835-bb96-6df1fd4d6477.md  report-32619595-2e2f-4a9a-aceb-9519b140ceb2.md  report-33a4f276.md  report-36d6571f.md  report-370338d3-09f7-4b59-9fb7-eee68a6d60b2.md  report-40a2bc5f-b231-4991-8b70-c636212e1228.md  report-42cb2175-3b2e-400d-88e8-01043145e588.md  report-54e58edd-8f64-4ba7-8a9d-7bae36f0b411.md  report-55076885-311b-430a-8e46-d0f5037d2c0f.md  report-56e190f9-0fb9-479b-8101-19d34c630f64.md  report-5f65992d-8fe2-48b1-85a6-093aa4694db7.md  report-677d45c7.md  report-71f7d208-9556-45d8-8451-b37d92fcd480.md  report-7231fb67-3981-4952-9e68-d1c059bb4ea6.md  report-7764aa78.md  report-7d9653a1-cd22-4aaa-a63f-c99afb480c9d.md  report-82fa101f-fbb8-430c-9fb3-1f8fdbd33820.md  report-890b4ab8-7b31-440a-a4bc-5555d1bda561.md  report-943b63cf-a095-4ec9-914b-f5a602f25540.md  report-96d9ef83-heuristic.md  report-96d9ef83-llm.md  report-986c41e3-8a67-4d7f-9e2f-23ac6c15ac8b.md  report-a1935e94-0d1f-4f4e-813c-73a5812f84cf.md  report-a6aa4066-8446-4de5-aedd-9b08765dc507.md  report-af2fbf5f-b1a9-4a08-b30e-aba710fd5f6a.md  report-b3cb7096-b914-4662-afb7-4edb05f96cd2.md  report-bab39454-2822-4e02-bc29-58a97f03d6ba.md  report-beda355d-88a1-4b69-948c-f9e82b58ca8a.md  (+14 more)
results/.runs/: 001e5a27-e7c5-4c31-b6b0-0c78ea2b7ee3.json  (+58 more)
scripts/: demo-check.sh
tests/: test_context_independence.py  test_events.py  test_groq_llm.py  test_llm_driver.py  test_mcp_server.py  test_mutations.py  test_persona.py  test_persona_loader.py  test_reducer_resolution.py  test_report.py  test_router.py  test_screenshot_annotator.py  test_validation.py  test_worker_sandbox.py
(+15 files in other folders)
