[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flamboyance"
version = "0.1.0"
description = "UX-friction agent extension: Playwright-driven synthetic personas that browse a web app, record friction, and expose tools via MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Flamboyance" }]
dependencies = [
    "playwright>=1.40.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.5.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["agents*", "mcp*", "llm*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
