[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flamboyance"
version = "0.1.0"
description = "UX-friction agent extension: Playwright-driven synthetic personas that browse a web app, record friction, and expose tools via MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Flamboyance" }]
dependencies = [
    "playwright>=1.40.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.5.0",
    "openai>=1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "mcp*", "llm*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--cov=agents",
    "--cov=llm",
    "--cov=mcp",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=49",
]

[tool.coverage.run]
branch = true
source = ["agents", "llm", "mcp"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["agents", "llm", "mcp"]
